objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Adjust and Negotiate</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Adjust and Negotiate</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
        <values>
            <fullName>Triggered</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Hold_Status_Copy__c</fullName>
        <label>Account Hold Status Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <description>This field is used to capture the industry of the account associated to the opportunity</description>
        <formula>TEXT( Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market_Segment__c</fullName>
        <description>This field is used to capture the Market segment for the opportunity</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>COMA</fullName>
                </value>
                <value>
                    <fullName>CPAA</fullName>
                </value>
                <value>
                    <fullName>EAML</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>HCS2</fullName>
                </value>
                <value>
                    <fullName>HMSG</fullName>
                </value>
                <value>
                    <fullName>HSC1</fullName>
                </value>
                <value>
                    <fullName>HWB</fullName>
                </value>
                <value>
                    <fullName>IMTL</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>JG</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LGC</fullName>
                </value>
                <value>
                    <fullName>LGL</fullName>
                </value>
                <value>
                    <fullName>LGN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>MARL</fullName>
                </value>
                <value>
                    <fullName>MBIL</fullName>
                </value>
                <value>
                    <fullName>MCCL</fullName>
                </value>
                <value>
                    <fullName>MCUL</fullName>
                </value>
                <value>
                    <fullName>MGC</fullName>
                </value>
                <value>
                    <fullName>MGL</fullName>
                </value>
                <value>
                    <fullName>MINAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Setup_Screening_Creation__c</fullName>
        <description>Date that the Account Setup Screening Case associated with this Opportunity was created.</description>
        <label>Account Setup Screening Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Structure_Case_Creation__c</fullName>
        <description>Date that the Account Structure Case associated with this Opportunity was created.</description>
        <label>Account Structure Case Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Administrative_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This hidden checkbox is used to trigger an update on the Opportunity object via a data load, in order to trigger events that would occur for an isUpdate operation.</description>
        <inlineHelpText>This checkbox should remain hidden.</inlineHelpText>
        <label>Administrative Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Sam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Sam</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_UW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned UW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Underwriter__c</fullName>
        <label>Assigned Underwriter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Associated Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <formula>IF(Opp_Prod_Prob__c &gt; 0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Assigned_Operations__c</fullName>
        <description>for field history tracking purposes work around to not being able to audit a look up field</description>
        <label>Audit Assigned Operations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCC_Program_s__c</fullName>
        <description>This field is used to capture the Blue Care Connection programs included if BCC Standard or BCC Enhanced is not chosen as the HCM Program Model</description>
        <inlineHelpText>Blue Care Connection programs included if BCC Standard or BCC Enhanced is not chosen as the HCM Program Model</inlineHelpText>
        <label>BCC Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>HCM_Program_Model__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Care Coordination Early Intervention</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Condition Management (DM)</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Management</fullName>
                </value>
                <value>
                    <fullName>NurseLine</fullName>
                </value>
                <value>
                    <fullName>Special Beginnings</fullName>
                </value>
                <value>
                    <fullName>Utilization Management</fullName>
                </value>
                <value>
                    <fullName>Well on Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Type__c</fullName>
        <label>Batch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beng_LatestCorrespondanceID__c</fullName>
        <label>Beng LatestCorrespondanceID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beng_LatestTransactionID__c</fullName>
        <label>Beng LatestTransactionID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bull_s_Eye__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bull&apos;s Eye Checkbox on Opportunity which is dependent on case Bull&apos;s Eye Checkbox being checked.</description>
        <label>Bull&apos;s Eye?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Days_Before_Due_Date__c</fullName>
        <formula>IF(ISNULL(Underwriting_Case_Closed__c),null ,(5 * ( FLOOR( ( CloseDate - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CloseDate - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( Underwriting_Case_Closed__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Underwriting_Case_Closed__c - DATE( 1900, 1, 8), 7 ) ) ) + IF((Underwriting_Case_Closed_Date_Time__c - DATETIMEVALUE(TEXT(Underwriting_Case_Closed__c) + &quot; 17:00:00&quot;)) &lt; 0.00, 0.5, 0))</formula>
        <label>Business Days Before Due Date</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Census_Report_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture whether the census report has been received for Medicare products</description>
        <inlineHelpText>Whether census report has been received for Medicare products</inlineHelpText>
        <label>Census Report Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Approval_Received_Date__c</fullName>
        <description>Date of the ‘Client Approval Received’ status on Account Structure Case associated with this Opportunity.</description>
        <label>Client Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Received_Paperwork__c</fullName>
        <description>This field is used to capture if the client received the paperwork for the opportunity</description>
        <label>Client Received Paperwork</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Cloned From)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Comments__c</fullName>
        <description>This field is used to capture the detailed description on why an Opportunity is closed won, lost or declined.</description>
        <label>Closed Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Clusters__c</fullName>
        <description>This field is used to capture the cluster of the opportunity.</description>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concerns_Issues__c</fullName>
        <description>This field is used to capture concerns or issues that may impact a renewal.</description>
        <label>Concerns/Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County_Code__c</fullName>
        <label>County Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Health_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>County Health Rating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Report_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture whether the county report has been received for Medicare products</description>
        <inlineHelpText>Whether county report has been received for Medicare products</inlineHelpText>
        <label>County Report Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentUserProfileName__c</fullName>
        <formula>$Profile.Name</formula>
        <label>CurrentUserProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Tier_Billing__c</fullName>
        <label>Current Tier/Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age Rated</fullName>
                </value>
                <value>
                    <fullName>Composite Rated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>This field is used to capture the date when the opportunity is won or lost.</description>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Nexus_Delivered_to_GPD_AE__c</fullName>
        <description>This field is used to capture the date Nexus results were shared with Group Medicare Account Executive</description>
        <inlineHelpText>Date Nexus results were shared with Group Medicare Account Executive</inlineHelpText>
        <label>Date Nexus Delivered to GPD AE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Nexus_Results_Received__c</fullName>
        <description>This field is used to capture the date results were returned from Nexus for Group Medicare</description>
        <inlineHelpText>Date results were returned from Nexus</inlineHelpText>
        <label>Date Nexus Results Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Nexus_Results_Requested__c</fullName>
        <description>This field is used to capture the date the request was sent for Nexus results for Group Medicare</description>
        <inlineHelpText>Date request was sent for Nexus results</inlineHelpText>
        <label>Date Nexus Results Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quote_Delivered_to_GPD_AE__c</fullName>
        <description>This field is used to capture the date the quote was shared with Group Medicare Account Executive</description>
        <inlineHelpText>Date quote was shared with Group Medicare Account Executive</inlineHelpText>
        <label>Date Quote Delivered to GPD AE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quote_Received_from_GPD_UW__c</fullName>
        <description>This field is used to capture the date the quote was returned from Medicare Underwriting</description>
        <inlineHelpText>Date quote was returned from Medicare Underwriting</inlineHelpText>
        <label>Date Quote Received from GPD UW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_GPD_UW__c</fullName>
        <description>This field is used to capture the date the request was sent to Medicare Underwriting</description>
        <inlineHelpText>Date request was sent to Medicare Underwriting</inlineHelpText>
        <label>Date Sent to GPD UW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Account__c</fullName>
        <label>Date to Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_GA__c</fullName>
        <label>Date to GA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Producer__c</fullName>
        <label>Date to Producer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Submit__c</fullName>
        <formula>Renewal_Date__c - Submit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Release__c</fullName>
        <description>Number of days from Account Setup Screening Creation date to Client Approval Received Date.</description>
        <label>Days to Release</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Structure_Approval__c</fullName>
        <description>Number of days from Account Structure Case creation date to Client Approval Received date.</description>
        <label>Days to Structure Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Structure_Case__c</fullName>
        <description>Number of dates from Account Structure Case creation to Opportunity Status won.</description>
        <label>Days to Structure Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Count__c</fullName>
        <description># of Subscribers enrolled for Dental(does not include members count)</description>
        <label>Dental Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Tier_Number__c</fullName>
        <label>Dental Tier Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Manager_of_Owner__c</fullName>
        <description>This field is used to check if the manager or indirect manager of an opportunity record owner is the logged in user.</description>
        <formula>OR( $User.Id = Owner.ManagerId , $User.Id = Owner.Manager.ManagerId , $User.Id = Owner.Manager.Manager.ManagerId, $User.Id = Owner.Manager.Manager.Manager.ManagerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner on My Team?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute_Via_Mail_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute Via Mail to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute_Via_Mail_to_GA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute Via Mail to GA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute_Via_Mail_to_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute Via Mail to Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Deadline__c</fullName>
        <formula>IF(OR(ISPICKVAL(HCSC_Division__c,&apos;IL&apos;),ISPICKVAL(HCSC_Division__c,&apos;TX&apos;),ISPICKVAL(HCSC_Division__c ,&apos;MT&apos;)), Renewal_Date__c - 60 , IF(OR(ISPICKVAL(HCSC_Division__c ,&apos;OK&apos;),ISPICKVAL(HCSC_Division__c ,&apos;NM&apos;)), Renewal_Date__c - 85 , NULL))</formula>
        <label>Distribution Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>This field is used to capture the district of the opportunity.</description>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>037</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>043</fullName>
                </value>
                <value>
                    <fullName>061</fullName>
                </value>
                <value>
                    <fullName>062</fullName>
                </value>
                <value>
                    <fullName>063</fullName>
                </value>
                <value>
                    <fullName>098</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>290</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docversion__c</fullName>
        <label>DocVersion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-None-</fullName>
                    <default>true</default>
                    <label>-None-</label>
                </value>
                <value>
                    <fullName>draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domestic Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_Renewal_Exhibits_Access__c</fullName>
        <formula>IF(AND(OR(CurrentUserProfileName__c=&apos;SGR Operations User&apos;,CurrentUserProfileName__c=&apos;SG Service Center_LEX&apos;,CurrentUserProfileName__c=&apos;SGR_Group Verifier&apos;),OR(ISPICKVAL(Rating_Status__c,&apos;Marketing Release&apos;),ISPICKVAL(Rating_Status__c,&apos;Sold&apos;),ISPICKVAL(Rating_Status__c,&apos;Finalized&apos;))),0,1)</formula>
        <label>Draft Renewal Exhibits Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Notification_in_Days__c</fullName>
        <defaultValue>2</defaultValue>
        <description>This field is used to capture the number of days advance of the Due Date that the Opportunity Owner should receive a notification (defaulted to 2)</description>
        <label>Due Date Notification (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Month__c</fullName>
        <description>The month for the Opportunity Requested Effective Date.</description>
        <formula>CASE(MONTH(Requested_Effective_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month of Effective Date.</inlineHelpText>
        <label>Effective Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Offering_Type__c</fullName>
        <description>This field is used to capture the type of quote opportunity is requesting (Private Exchange or not)</description>
        <inlineHelpText>Type of quote opportunity is requesting - On Private Exchange and/or Off Private Exchange</inlineHelpText>
        <label>Exchange Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Private Exchange</fullName>
                </value>
                <value>
                    <fullName>All On Private Exchange</fullName>
                </value>
                <value>
                    <fullName>All On Private Exchange or No Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Part On Private Exchange and Part No Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Private Exchange - Blue Directions</fullName>
                </value>
                <value>
                    <fullName>Private Exchange - External</fullName>
                </value>
                <value>
                    <fullName>Private Exchange - Blue Directions and External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Decision_Date__c</fullName>
        <description>This field is used to capture the date when a decision is expected for the Opportunity.</description>
        <label>Expected Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Dental_Contracts_Lex__c</fullName>
        <label>Expected Dental Contracts</label>
        <summarizedField>Opportunity_Product__c.Projected_Contracts__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>